--- a/.gitignore
+++ b/.gitignore
@@ -1,131 +1,88 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
+*~
+*pyc
+*.DS_Store
 *.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+*.eggs
+*.egg-info
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+*.pyc
+*.sass-cache
+*build/
+*dat
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
+venv
+.pytest_cache/
+.ipynb_checkpoints
+.ruby-version
+.tox
 .mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-.DS_Store
+dist/
+pip-wheel-metadata
+server/
+scala/
+mongodb/
+.cache/
+build/
+*.egg-info/
+jnk/
+logs/
+tmp/
+profile.*
+*.sqlite
+lastmile_ai/learn/plots/
+*npy
+*#
+/config.json
+*log.json
+.coverage
+.coveralls.yml
 .idea/
+.venv/
+*.iml
+out/
+.vscode/
+tmp_training_data.json
+.DS_Store
+models/
+.mypy_cache/
+*.tar.gz
+secrets.tar
+.pytest_cache
+test_download.zip
+bower_components/
+build/lib/
+/models/
+node_modules/
+npm-debug.log
+examples/moodbot/py3/
+.python-version
+tokens.dat
+graph.png
+graph.html
+story_graph.html
+story_graph.dot
+debug.md
+examples/moodbot/*.png
+examples/moodbot/errors.json
+examples/formbot/models*
+examples/concertbot/models*
+examples/moodbot/models*
+failed_stories.md
+errors.json
+pip-wheel-metadata/*
+events.db
+events.db-shm
+events.db-wal
+rasa.db
+rasa.db-shm
+rasa.db-wal
+*.swp
+*.coverage*
+env
+.dir-locals.el
+.history
+rasa/segment_key
+rasa/keys
+
+# Local Netlify folder
+.netlify
